--- a/src/pages/Dashboard/style.css
+++ b/src/pages/Dashboard/style.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
 }
+
 .dashboard__cards_info {
   width: 60vw;
   height: 20vh;
@@ -14,9 +15,63 @@
 }
 
 .dashboard__notification {
-  width: 15vw;
-  height: 70vh;
+  width: 16vw;
+  height: auto;
   border-radius: 10px;
   margin-top: 3rem;
-  background-color: #f20094;
+  background-color: #ff39b3;
+  box-shadow: 2px 2px 5.5px rgb(168, 168, 168);
+}
+
+.progress-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background: radial-gradient(closest-side, white 79%, transparent 80% 100%),
+    conic-gradient(hotpink 75%, pink 0);
+}
+
+.progress-bar::before {
+  content: "75%";
+}
+
+.dashboard__graph {
+  width: 10rem;
+  height: 10rem;
+  border: 1px solid #f20094;
+}
+
+.dashboard__loader {
+  width: 15vw;
+  height: 30vh;
+  border: 3px solid #f20094;
+  box-shadow: inset 0 0 2px 2px #fb56bc;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
+  /* margin-left: 40rem; */
+}
+
+.dashboard__loader_2 {
+  width: 15vw;
+  height: 30vh;
+  border: 3px solid #f20094;
+  box-shadow: inset 0 0 2px 2px #fb56bc;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  /* margin-left: 40rem; */
+}
+
+.dashboard__loader__heading {
+  margin-bottom: 15px;
 }
