Description: 1. Validate add banner form 2. made dashboard ui 3. made user list 4. made user management

--- a/src/components/Notification/style.css
+++ b/src/components/Notification/style.css
@@ -5,14 +5,21 @@
   margin: 10px;
 }
 
+.notification_search_icon {
+  position: absolute;
+  margin: 7px 0 0 30px;
+  z-index: 10;
+}
+
 .notification__search {
   width: 13rem;
+  position: relative;
   height: 2rem;
   border-radius: 10rem;
   background-color: white;
   margin-left: 20px;
   border: none;
   outline: none;
-  padding-left: 10px;
+  padding-left: 30px;
   font-size: 14px;
 }
