--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -6,10 +6,32 @@
   box-shadow: 3px 3px 5.5px rgb(244, 143, 143);
   border-radius: 10px;
   margin: 8rem 0 0 2rem;
+  padding: 10px;
   cursor: pointer;
 }
 
 .main__card:hover {
   margin: 5rem 0 0 2rem;
   transition: 0.8s ease;
+}
+
+.card__heading {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.card__icon__number {
+  display: flex;
+  gap: 20px;
+  padding: 3px 0;
+  align-items: flex-start;
+}
+
+.card__icon {
+  font-size: 25px;
+}
+
+.card__number {
+  font-size: 20px;
+  margin-right: 50px;
 }
