--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -5,4 +5,24 @@
   border-right: 12px solid #ff65c4;
   border-radius: 0 20px 20px 0;
   box-shadow: 10px 0 #ff9eda;
+  padding: 50px 0 0 50px;
+}
+
+.sidebar__content {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.sidebar__data {
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+  padding: 10px;
+}
+
+.sidebar__icon {
+  font-size: 30px;
+  color: white;
+  display: flex;
 }
