--- a/src/pages/EnterOtp/OtpField/style.css
+++ b/src/pages/EnterOtp/OtpField/style.css
@@ -3,7 +3,7 @@
   height: 3rem;
   border: none;
   outline: none;
-  border-bottom: 2px solid var(--primary-color);
+  border-bottom: 2px solid #f20094;
   font-size: 30px;
   text-align: center;
 }
