--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -3,8 +3,8 @@
   height: 100vh;
   background-color: #f20094;
   border-right: 12px solid #ff65c4;
-  border-radius: 0 20px 20px 0;
   box-shadow: 10px 0 #ff9eda;
+  border-radius: 0 20px 20px 0;
   padding: 50px 0 0 50px;
 }
 
@@ -19,6 +19,17 @@
   font-size: 20px;
   color: white;
   padding: 10px;
+}
+
+.sidebar__active_data{
+  width: 100%;
+  background-color: #fff;
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+  font-size: 20px;
+  padding: 10px;
+
 }
 
 .sidebar__icon {
