--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  width: calc(100% + 24px);
 }
 
 .sidebar__data {
@@ -21,15 +22,16 @@
   padding: 10px;
 }
 
-.sidebar__active_data{
+.sidebar__active_data {
   width: 100%;
   background-color: #fff;
   font-weight: bold;
   color: black;
   text-decoration: none;
+  border-radius: 20px 0 0 0;
+  margin-left: 10px;
   font-size: 20px;
   padding: 10px;
-
 }
 
 .sidebar__icon {
