--- a/src/pages/Banner/style.css
+++ b/src/pages/Banner/style.css
@@ -1,8 +1,4 @@
-.banner__container {
-  width: 75vw;
-  height: 80vh;
-  border-radius: 10px;
-  margin: auto;
-  padding: 10rem 0 0 5rem;
-  background-color: aliceblue;
+.add__banner__styling {
+  display: flex;
+  justify-content: flex-end;
 }
