--- a/src/components/AlertPopUp/style.css
+++ b/src/components/AlertPopUp/style.css
@@ -1,16 +1,3 @@
-.main_pop_container {
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.8);
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 20;
-}
-
 .alert__popup__container {
   gap: 10px;
 }
@@ -50,9 +37,11 @@
   font-family: "roboto", "sans-serif";
   font-size: 20px;
   color: white;
-
   padding: 10px 0;
   border-radius: 5px;
+  text-align: center;
+}
 
+.alert__popup__dropdown {
   text-align: center;
 }
