--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -3,7 +3,7 @@
 }
 
 .layout__nav__content {
-  padding: 10px 10px 10px 20px;
+  padding: 0 10px 10px 20px;
   width: 80vw;
   height: 100vh;
   overflow: scroll;
