--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -3,6 +3,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: sticky;
+  background-color: white;
+  z-index: 50;
+  top: 0;
 }
 
 .navbar__search_bar {
