--- a/src/components/pages/userManagement/SuspendUser/style.css
+++ b/src/components/pages/userManagement/SuspendUser/style.css
@@ -2,6 +2,7 @@
   width: 30vw;
   height: 30vh;
   display: flex;
+  margin-bottom: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
