--- a/src/pages/Dashboard/style.css
+++ b/src/pages/Dashboard/style.css
@@ -1,6 +1,7 @@
 .dashboard__container {
   display: flex;
   justify-content: space-between;
+  overflow: auto;
 }
 
 .dashboard__cards_info {
@@ -76,7 +77,6 @@
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
-  /* margin-left: 40rem; */
 }
 
 .dashboard__loader__heading {
