--- a/src/components/Table/GiftTable/style.css
+++ b/src/components/Table/GiftTable/style.css
@@ -19,3 +19,20 @@
   border: none;
   border-bottom: 1px solid grey;
 }
+
+.gift__table__edit__icon {
+  font-size: 25px;
+  color: rgb(0, 140, 255);
+  cursor: pointer;
+}
+
+.gift__table__delete__icon {
+  font-size: 25px;
+  color: red;
+  cursor: pointer;
+}
+
+.add__gift {
+  display: flex;
+  justify-content: flex-end;
+}
