--- a/src/pages/Following/style.css
+++ b/src/pages/Following/style.css
@@ -1,19 +1,18 @@
-.host__report__container {
+.user__following__container {
   padding: 3rem 0;
 }
 
-.host__report__table {
+.user__following__table {
   width: 100%;
   border-collapse: collapse;
 }
 
-.host__report__header {
-  padding: 10px;
+.user__following__header {
   background-color: #f20094;
   color: white;
+  padding: 10px;
 }
 
-.host__report__data {
+.user__following__data {
   text-align: center;
-  padding: 10px 0;
 }
