--- a/src/components/Table/HostReportTable/style.css
+++ b/src/components/Table/HostReportTable/style.css
@@ -15,5 +15,7 @@
 
 .host__report__data {
   text-align: center;
-  padding: 10px 0;
+  padding: 10px 5px;
+  border: none;
+  border-bottom: 1px solid grey;
 }
