--- a/src/components/Table/TopTalentTable/style.css
+++ b/src/components/Table/TopTalentTable/style.css
@@ -10,7 +10,7 @@
 .top__talent__header {
   background-color: #f20094;
   color: white;
-  padding: 10px;
+  padding: 10px 0;
 }
 
 .top__talent__data {
