--- a/src/pages/Report/style.css
+++ b/src/pages/Report/style.css
@@ -15,9 +15,10 @@
   width: 6rem;
   height: 4rem;
   border: none;
-  background-color: purple;
-  font-size: 20px;
-  color: white;
+  background-color: var(--color-pink);
+  font-size: var(--fontsize-medium);
+  font-family: var(--fontfamily-sansserif);
+  color: var(--color-white);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -28,8 +29,9 @@
   width: 6rem;
   height: 4rem;
   border: none;
-  background-color: rgb(220, 220, 220);
-
+  background-color: var(--color-grey);
+  font-size: var(--fontsize-regular);
+  font-family: var(--fontfamily-sansserif);
   display: flex;
   align-items: center;
   justify-content: center;
