--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,43 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,400&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-.App {
-  font-family: "Roboto", sans-serif;
 
-  width: 100vw;
-  height: 100vh;
+:root {
+  --fontfamily-sansserif: "Poppins", sans-serif;
+  /* --fontfamily-serif: "Lora", serif; */
+  /* --fontfamily-cursive: "Dancing Script", cursive; */
+
+  --fontsize-xxlarge: 50px;
+  --fontsize-xlarge: 30px;
+  --fontsize-large: 25px;
+  --fontsize-medium: 20px;
+  --fontsize-regular: 18px;
+  --fontsize-small: 16px;
+  --fontsize-xsmall: 14px;
+
+  --fontweight-black: 700;
+  --fontweight-bold: 600;
+  --fontweight-medium: 500;
+  --fontweight-regular: 400;
+  --fontweight-light: 300;
+
+  --color-pink: #f20094;
+  --color-grey: #ccc;
+  --color-white: #fff;
+  --color-black: #000;
+  --color-red: #ff0000;
+  --color-lightpink: #ffdff3;
+
+  --button-height: 50px;
+  --button-radius: 24px;
+  --button-circle: 100%;
+}
+
+.form__data {
+  width: 20rem;
 }
