--- a/src/components/Notification/style.css
+++ b/src/components/Notification/style.css
@@ -1,6 +1,8 @@
 .notification__heading {
-  font-size: 18px;
-  color: white;
+  font-size: var(--fontsize-regular);
+  font-family: var(--fontfamily-sansserif);
+  font-weight: var(--fontweight-medium);
+  color: var(--color-white);
   text-align: center;
   margin: 10px;
 }
@@ -21,5 +23,5 @@
   border: none;
   outline: none;
   padding-left: 30px;
-  font-size: 14px;
+  font-size: var(--fontsize-small);
 }
