--- a/src/components/Table/AcceptedHostTable/style.css
+++ b/src/components/Table/AcceptedHostTable/style.css
@@ -8,8 +8,10 @@
 }
 
 .accepted__host__header {
-  background-color: #f20094;
-  color: white;
+  background-color: var(--color-pink);
+  color: var(--color-white);
+  font-family: var(--fontfamily-sansserif);
+  font-weight: var(--fontweight-bold);
   padding: 10px;
 }
 
@@ -21,6 +23,8 @@
   padding: 10px 5px;
   border: none;
   border-bottom: 1px solid grey;
+  font-family: var(--fontfamily-sansserif);
+  font-size: var(--fontsize-small);
   text-align: center;
 }
 
