--- a/src/components/Table/HostCallHistoryTable/style.css
+++ b/src/components/Table/HostCallHistoryTable/style.css
@@ -8,11 +8,17 @@
 }
 
 .host__call__history__header {
-  background-color: #f20094;
-  color: white;
+  background-color: var(--color-pink);
+  color: var(--color-white);
+  font-family: var(--fontfamily-sansserif);
+  font-weight: var(--fontweight-medium);
   padding: 10px;
 }
 
 .host__call__history__data {
   text-align: center;
+  font-family: var(--fontfamily-sansserif);
+  padding: 10px;
+  border: none;
+  border-bottom: 1px solid black;
 }
