--- a/src/components/Table/HostMomentTable/style.css
+++ b/src/components/Table/HostMomentTable/style.css
@@ -8,14 +8,19 @@
 }
 
 .host__moment__header {
-  background-color: #f20094;
-  color: white;
+  background-color: var(--color-pink);
+  color: var(--color-white);
+  font-weight: var(--fontweight-medium);
+  font-family: var(--fontfamily-sansserif);
+
   padding: 10px;
 }
 
 .host__moment__data {
   text-align: center;
   padding: 10px 5px;
+  font-family: var(--fontfamily-sansserif);
+
   border: none;
   border-bottom: 1px solid grey;
 }
