--- a/src/components/Table/RejectedHostTable/style.css
+++ b/src/components/Table/RejectedHostTable/style.css
@@ -12,6 +12,7 @@
   padding: 10px 5px;
   border: none;
   border-bottom: 1px solid grey;
+  font-family: var(--fontfamily-sansserif);
   text-align: center;
 }
 
@@ -38,6 +39,9 @@
 
 .rejected__host__header {
   background-color: #f20094;
+  font-family: var(--fontfamily-sansserif);
+  font-size: var(--fontsize-regular);
+  font-weight: var(--fontweight-medium);
   padding: 10px;
   color: white;
 }
