--- a/src/components/Table/StickerTable/style.css
+++ b/src/components/Table/StickerTable/style.css
@@ -8,14 +8,18 @@
 }
 
 .sticker__table__heading {
-  background-color: #f20094;
-  color: white;
+  background-color: var(--color-pink);
+  color: var(--color-white);
   padding: 10px;
+  font-family: var(--fontfamily-sansserif);
+  font-weight: var(--fontweight-medium);
 }
 
 .sticker__table__data {
   text-align: center;
   padding: 10px 0;
+  font-family: var(--fontfamily-sansserif);
+
   border: none;
   border-bottom: 1px solid grey;
 }
