--- a/src/components/Table/SuspendedHostTable/style.css
+++ b/src/components/Table/SuspendedHostTable/style.css
@@ -9,6 +9,8 @@
 
 .suspended__host__table__header {
   background-color: #f20094;
+  font-weight: var(--fontweight-medium);
+  font-family: var(--fontfamily-sansserif);
   padding: 1rem 0;
   color: white;
 }
@@ -16,6 +18,8 @@
 .suspended__host__table__data {
   text-align: center;
   padding: 10px 0;
+  font-family: var(--fontfamily-sansserif);
+
   border: none;
   border-bottom: 1px solid grey;
 }
