--- a/src/components/Table/WarnedHostTable/style.css
+++ b/src/components/Table/WarnedHostTable/style.css
@@ -9,6 +9,9 @@
 
 .warned__host__header {
   background-color: #f20094;
+  font-family: var(--fontfamily-sansserif);
+  font-weight: var(--fontweight-medium);
+
   color: white;
   padding: 10px;
 }
@@ -16,6 +19,8 @@
 .warned__host__data {
   text-align: center;
   padding: 10px 0;
+  font-family: var(--fontfamily-sansserif);
+
   border: none;
   border-bottom: 1px solid grey;
 }
