--- a/src/components/formComponents/AddGiftForm/style.css
+++ b/src/components/formComponents/AddGiftForm/style.css
@@ -1,13 +1,20 @@
 .add__gift__container {
-  padding: 1rem;
+  padding: 5px 0;
 }
 
 .add__gift__form__btn {
   margin: auto;
+  cursor: pointer;
 }
 
 .add__gift__heading {
   text-align: center;
-  margin-bottom: 10px;
-  text-decoration: underline 0.5px;
+  font-family: var(--fontfamily-sansserif);
+  font-weight: var(--fontweight-medium);
+  border-bottom: 1px solid black;
+  padding: 0.5rem 0;
+}
+
+.add__gift__form {
+  padding: 1rem 2rem;
 }
