--- a/src/components/formComponents/NotificationForm/style.css
+++ b/src/components/formComponents/NotificationForm/style.css
@@ -1,11 +1,16 @@
+.notification__form__container {
+  padding: 2px 0;
+}
+
 .notification__form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0 3rem;
+  padding: 1rem 2rem;
 }
 
 .notification__form__heading {
-  padding-bottom: 1.5rem;
-  text-decoration: underline 1px;
+  text-align: center;
+  cursor: pointer;
+  padding: 0.5rem;
+  border-bottom: 1px solid black;
+  font-family: var(--fontfamily-sansserif);
+  font-weight: var(--fontweight-medium);
 }
