--- a/src/pages/Coin/style.css
+++ b/src/pages/Coin/style.css
@@ -11,11 +11,15 @@
   background-color: #f20094;
   color: white;
   padding: 10px 0;
+  font-family: var(--fontfamily-sansserif);
+  font-weight: var(--fontweight-medium);
 }
 
 .wallet__data {
   text-align: center;
   padding: 10px 5px;
+  font-family: var(--fontfamily-sansserif);
+
   border: none;
   border-bottom: 1px solid grey;
 }
