--- a/src/pages/EditProfile/style.css
+++ b/src/pages/EditProfile/style.css
@@ -5,7 +5,7 @@
 .edit__profile__box {
   padding: 3rem;
   width: 100%;
-  background-color: rgb(255, 244, 244);
+  background-color: var(--color-lightpink);
   box-shadow: 1px 1px 1px 1px rgb(255, 219, 219);
   border-radius: 15px;
 }
