--- a/src/components/FormAlertPopUp/PremiumCoin/style.css
+++ b/src/components/FormAlertPopUp/PremiumCoin/style.css
@@ -2,15 +2,15 @@
   text-align: center;
   font-family: var(--fontfamily-sansserif);
   font-weight: var(--fontweight-medium);
-  padding: 0.5rem 1rem;
+  padding: 0.5rem;
   border: none;
   border-bottom: 1px solid black;
 }
 
-.premium__coin__container {
-  padding: 0.5rem 1rem;
-}
+/* .premium__coin__container {
+  padding: 0.5rem;
+} */
 
 .premium__coin {
-  padding: 0.5rem;
+  padding: 1rem;
 }
