--- a/src/components/Table/PaymentHistoryTable/style.css
+++ b/src/components/Table/PaymentHistoryTable/style.css
@@ -8,9 +8,12 @@
 }
 
 .payment__history__header {
-  background-color: #f20094;
-  color: white;
+  background-color: var(--color-pink);
+  color: var(--color-white);
   padding: 10px;
+  font-family: var(--fontfamily-sansserif);
+  font-weight: var(--fontweight-medium);
+  font-size: var(--fontsize-regular);
 }
 
 .payment__history__data {
@@ -18,4 +21,5 @@
   border: none;
   border-bottom: 1px solid grey;
   padding: 10px;
+  font-family: var(--fontfamily-sansserif);
 }
