--- a/src/pages/EditProfile/style.css
+++ b/src/pages/EditProfile/style.css
@@ -1,16 +1,27 @@
 .edit__profile__container {
-  padding: 3rem 0;
-}
-
-.edit__profile__box {
-  padding: 3rem;
   width: 100%;
+  height: auto;
+  border-radius: 10px;
+  margin: 5rem 0;
+  padding: 1rem;
   background-color: var(--color-lightpink);
-  box-shadow: 1px 1px 1px 1px rgb(255, 219, 219);
-  border-radius: 15px;
 }
 
-.edit__profile__icon {
-  width: 18rem;
+.edit__profile__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  background-color: var(--color-white);
+  border: 1px solid #f20094;
+  margin: 1rem 0;
+  height: 3rem;
   cursor: pointer;
+}
+
+.edit__profile__content {
+  /* padding: 1rem; */
+  font-family: var(--fontfamily-sansserif);
+  font-size: var(--fontsize-regular);
+  font-weight: var(--fontweight-medium);
 }
