--- a/src/components/ImagePopUpModal/style.css
+++ b/src/components/ImagePopUpModal/style.css
@@ -4,3 +4,11 @@
   object-fit: contain;
   text-align: center;
 }
+
+.swiper__container {
+  width: 25rem;
+  height: 25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
