--- a/src/pages/Bucket/style.css
+++ b/src/pages/Bucket/style.css
@@ -1,24 +1,64 @@
 .bucket__container {
-  width: 80vw;
+  width: 100%;
   padding: 2rem;
   display: flex;
   align-items: center;
+  justify-content: space-around;
+  margin: 5rem 0;
   gap: 5rem;
+  background-color: var(--color-lightpink);
+  border-radius: 10px;
 }
 
 .bucket__coin__amount {
-  width: 30vw;
   height: auto;
   border: none;
   font-size: 20px;
-  display: flex;
   padding: 20px 20px;
-  justify-content: space-between;
-  align-items: center;
   border-radius: 10px;
-  box-shadow: hsla(0, 0%, 0%, 0.24) 0px 3px 8px;
+  box-shadow: 1px 1px #ffcaeb;
 }
 
-.bucket__coin {
+.bucket__heading {
+  font-family: var(--fontfamily-sansserif);
+  font-size: var(--fontsize-large);
+  font-weight: var(--fontweight-medium);
+}
+
+.bucket__para {
+  font-family: var(--fontfamily-sansserif);
+}
+
+.bucket__table__container {
+  padding: 0.5rem 0;
+}
+
+.bucket__table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.bucket__table__header {
+  background-color: var(--color-pink);
+  color: var(--color-white);
+  font-family: var(--fontfamily-sansserif);
+  font-weight: var(--fontweight-medium);
+  padding: 10px 0;
+}
+
+.bucket__table__data {
   text-align: center;
+  font-family: var(--fontfamily-sansserif);
+  padding: 10px 0;
+  border-bottom: 1px solid black;
+}
+
+.bucket__icon__para {
+  display: flex;
+  gap: 10px;
+}
+
+.bucket__icon {
+  width: 25px;
+  height: 25px;
 }
